# zguide

./: .gitignore  BUILD_fuxxx.md  CMakeLists.txt  CMakePresets.json  TC_clang.cmake  cmake-custom-kits.json
examples/C++/: .gitignore  CMakeLists.txt  CMakePresets.json
settings/: TC_arm.cmake  TC_arm32.cmake  cmake-custom-kits.json
